Fixed Co-PI issue and added colours and fixed overlapping issue (6 hours)

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -142,7 +142,7 @@ body {
 .text_content {
     background-color:white;
     width: 400px;
-    height: 250px;
+    height: auto;
 }
 
 #title_header {
